Prevent links with the text as a URL that doesn't have clear wrap points from extending beyond the tooltip box.
Many footnotes include URLs as a reference, and some URLs don't have a natural break/wrap point within the later part of the URL (unfortunately, browsers don't currently consider the slash in a URL as a wrap point.)

In my case, I had `https://www.sciencedaily.com/releases/2005/10/051031080008.htm` as a URL being referenced in a footnote, but that went well beyond the tooltip box.

This additional CSS makes it so URLs are contained on the same line (helps UX, in a way), and they never extend beyond the tooltip box (instead, it truncates with an ellipsis at the end of the URL instead of letting it continue beyond the tooltip box.)

This does have the effects apply to all links, but I think that isn't the worst thing given the tradeoff for when this isn't being accounted for & a link can outright look broken (going beyond the tooltip box) as a result.

--- a/modern-footnotes/styles.css
+++ b/modern-footnotes/styles.css
@@ -37,6 +37,13 @@
 	font-size: 80%;
 	color: #777;
 }
+.modern-footnotes-footnote__note a {
+	display: inline-block;
+	max-width: 100%;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
 /* default tooltip style for desktop */
 .modern-footnotes-footnote__note--tooltip {
 	position: absolute;
